--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,4 +5,5 @@ spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 
-#algamoney.origin-permitida=http://localhost:4200
+opiniao.origin-permitida= https://opiniao-api.herokuapp.com
+
