alterações no banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbopiniao1
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbopiniao
 spring.datasource.username=postgres
 spring.datasource.password=#DRJ#Naruto#
 
