alterações no banco

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,5 @@ spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 
-opiniao.origin-permitida=
-https://opiniao-api.herokuapp.com
+opiniao.origin-permitida=https://opiniao-api.herokuapp.com
 
