--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,5 @@ spring.datasource.password={JDBC_DATABASE_PASSWORD}
 opiniao.origin-permitida=http://localhost:4200
 
 # opiniao.origin-permitida=https://opiniao-api.herokuapp.com
+
+# heroku config:get 
