--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,8 +4,8 @@ spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-opiniao.origin-permitida=http://localhost:4200
+# opiniao.origin-permitida=http://localhost:4200
 
-# opiniao.origin-permitida=https://opiniao-api.herokuapp.com
+opiniao.origin-permitida=https://opiniao-api.herokuapp.com
 
 # heroku config:get 
