--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.profiles.active=oauth-security
 #spring.main.allow-bean-definition-overriding=true
 
 #opiniao.origin-permitida=http://localhost:4200
-opiniao.origin-permitida=https://opiniao-api.herokuapp.com
+#opiniao.origin-permitida=https://opiniao-api.herokuapp.com
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
