Projeto inicial Lanchonete Opinião

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.profiles.active=oauth-security
 
 #spring.main.allow-bean-definition-overriding=true
 
-#opiniao.origin-permitida=http://localhost:4200
+opiniao.origin-permitida=http://localhost:4200
 #opiniao.origin-permitida=https://opiniao-api.herokuapp.com
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -23,7 +23,6 @@ spring.profiles.active=oauth-security
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 # spring.jpa.hibernate.ddl-auto = update
-
 
 ## default connection pool
 #spring.datasource.hikari.connectionTimeout=20000
